Hero section completed

--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
     </header>
 
     <main>
-        <h1>This website is awesome</h1>
-        <h4>placeholder text</h4>
-        <button type="button">Sign up</button>
-        <img src="" alt="placeholder img">
+        <div class="hero">
+            <div class="hero-text">
+                <div class="hero-main">This website is awesome<br></div>
+                <div class="hero-secondary">placeholder text in multiple rows that is smaller and of different color</div>
+                <button type="button">Sign up</button>
+            </div>
+        </div>
+        
+        <div class="hero-img"><img src="xueba.jpg" alt="placeholder img"></div>
     </main>
     
     <div class="info">
