Info section populated

--- a/index.html
+++ b/index.html
@@ -30,25 +30,27 @@
     </main>
     
     <div class="info">
-        <h2>Some random information</h2>
-        <figure>
-            <img src="" alt="img1">
-            <figcaption>img1</figcaption>
-        </figure>
-        <figure>
-            <img src="" alt="img2">
-            <figcaption>img2</figcaption>
-        </figure>
+        <h2 class="info-header">Choose The Odin Project!</h2>
+        <div class="images">
+            <figure>
+                <img class="card" src="info1.jpg" alt="img1">
+                <figcaption>Keen to learn web development? There is so much resources out there!</figcaption>
+            </figure>
+            <figure>
+                <img class="card" src="info2.jpg" alt="img2">
+                <figcaption>However, it is very easy to get stuck in tutorial-hell!</figcaption>
+            </figure>
 
-        <figure>
-            <img src="" alt="img3">
-            <figcaption>img3</figcaption>
-        </figure>
+            <figure>
+                <img class="card" src="info3.jpg" alt="img3">
+                <figcaption>Learn with The Odin Project!, a thorough curriculum with great communities!</figcaption>
+            </figure>
 
-        <figure>
-            <img src="" alt="img4">
-            <figcaption>img4</figcaption>
-        </figure>
+            <figure>
+                <img class="card" src="info4.jpg" alt="img4">
+                <figcaption>Project based learning will bring your web-dev knowledge to the next level!</figcaption>
+            </figure>
+        </div>
     </div>
 
     <div class="quote">
