Quote section added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </figure>
             <figure>
                 <img class="card" src="info2.jpg" alt="img2">
-                <figcaption>However, it is very easy to get stuck in tutorial-hell!</figcaption>
+                <figcaption>However, it is very easy to get stuck in <a href="https://www.urbandictionary.com/define.php?term=Tutorial%20Hell">tutorial-hell</a>!</figcaption>
             </figure>
 
             <figure>
@@ -54,8 +54,10 @@
     </div>
 
     <div class="quote">
-        <p>this is some really random quote</p>
-        <p><cite>this is where you cite</cite></p>
+        <p class="quote-1">“Search Engine Optimization is no longer about stuffing keywords and attempting to trick Google into ranking your website. 
+            It’s about creating a user experience that is data driven. We know what customers are searching for and we know how to get them to a page. 
+            It’s a combination of science and art to successfully rank a website.”</p>
+        <p class="cite-1"><cite>-Leland Dieno, Socialize Your Small Business: Internet Marketing For Small Business</cite></p>
     </div>
 
     <div class="signup">
