--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     <header>
-        <h2 class="header-left">Header Logo</h2>
+        <h2 class="header-left">My landing page</h2>
         <div class="header-right">
-            <h4>header link one</h4>
-            <h4>header link two</h4>
-            <h4>header link three</h4>
+            <a href="https://www.theodinproject.com/paths/foundations" target="_blank"><h4>TOP Foundation</h4></a>
+            <a href="https://www.theodinproject.com/paths/full-stack-ruby-on-rails" target="_blank"><h4>Fullstack ruby on rails</h4></a>
+            <a href="https://www.theodinproject.com/paths/full-stack-javascript" target="_blank"><h4>Fullstack Javascript</h4></a>
         </div>
     </header>
 
     <main>
         <div class="hero">
             <div class="hero-text">
-                <div class="hero-main">This website is awesome<br></div>
-                <div class="hero-secondary">placeholder text in multiple rows that is smaller and of different color</div>
-                <button type="button">Sign up</button>
+                <div class="hero-main">The Odin Project<br></div>
+                <div class="hero-secondary">The Odin Project provides a free open source coding curriculum that can be taken entirely online. </div>
+                <a href="https://www.theodinproject.com/" target="_blank"><button type="button" class="main-button">Sign up</button></a>
             </div>
         </div>
         
@@ -38,7 +38,7 @@
             </figure>
             <figure>
                 <img class="card" src="info2.jpg" alt="img2">
-                <figcaption>However, it is very easy to get stuck in <a href="https://www.urbandictionary.com/define.php?term=Tutorial%20Hell">tutorial-hell</a>!</figcaption>
+                <figcaption>However, it is very easy to get stuck in <a class="card-2" href="https://www.urbandictionary.com/define.php?term=Tutorial%20Hell">tutorial-hell</a>!</figcaption>
             </figure>
 
             <figure>
@@ -60,9 +60,11 @@
         <p class="cite-1"><cite>-Leland Dieno, Socialize Your Small Business: Internet Marketing For Small Business</cite></p>
     </div>
 
-    <div class="signup">
-        <p>call to action! it's time!<br>Sign up for our product now!</p>
-        <button type="button">Sign up</button>        
+    <div class="signup-container">
+        <div class="signup">
+            <p class="signup-text">Call to action! it's time!<br>Start your web-development journey now!</p>
+            <a href="https://www.theodinproject.com/" target="_blank"><button type="button" class="signup-button" >Sign up</button></a>     
+        </div>
     </div>
 
     <footer>
